@@ -1,2 +1,2 @@
-lib/libnss_sss.so.2
+lib/*/libnss_sss.so.2
 usr/share/lintian/overrides/libnss-sss
