@@ -56,6 +56,7 @@ sssd (1.5.15-1) UNRELEASED; urgency=low
     definition was broken (upstream #1014). The daemon will need to be
     configured by other means before it's usable.
   * Add fix-format-security.diff (Closes: #643806)
+  * Add support for Multi-Arch.
 
  -- Petter Reinholdtsen <pere@debian.org>  Tue, 14 Sep 2010 12:06:37 +0200
 
